# serde_php-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-test.yml
proptest-regressions/: lib.txt
src/: de.rs  error.rs  lib.rs  ser.rs
