[package]
name = "serde_php"
version = "0.2.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
description = "Serde support for PHP's serialization format."
publish = false
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1" }
smallvec = "0.6.10"
thiserror = "1.0.4"
displaydoc = "0.1.4"

[dev-dependencies]
serde_bytes = "0.11.2"
serde = { version = "1.0.101", features = ["derive"] }
proptest = "0.9.4"
