[package]
name = "serde_php"
version = "0.5.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
description = "Serde support for PHP's serialization format."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mbr/serde_php-rs"
documentation = "https://docs.rs/serde_php"

[dependencies]
serde = { version = "1" }
smallvec = "1.6"

[dev-dependencies]
serde_bytes = "0.11.2"
serde = { version = "1.0.101", features = ["derive"] }
proptest = "0.9.4"
bson = "0.14.0"
